--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ Blacklist_python/.DS_Store
 .DS_Store
 /Scripts/WGS
 /Figures/data/bulkRNASeq
+Figures/tf_change_forbes_all_tf.xlsx
+Figures/tf_change_forbes_CTCF_REST_UBTF.xlsx
+Figures/figures.zip
