Ignore .gitignore itself

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Blacklist_python/.DS_Store
 Figures/tf_change_forbes_all_tf.xlsx
 Figures/tf_change_forbes_CTCF_REST_UBTF.xlsx
 Figures/figures.zip
+.Rproj.user
